--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
+<app-header *ngIf="showLayout"></app-header>
 
 <div class="container">
   <router-outlet></router-outlet>
 </div>
 
-<app-footer></app-footer>
+<app-footer *ngIf="showLayout"></app-footer>
