Criando modulos produtos e auth, paginas list produtos, edit e add, pagina de login e AuthService com http interceptor e jwtService, movendo material module para shared modules

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .container {
     padding: 20px 80px;
 }
+
+.centered-content {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
