Add guard para proteger rotas, add botao logout no header e criando metodo isAuthetenticated no authService

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -22,7 +22,7 @@
                 </mat-form-field>
             </p>
 
-            <button class="login-button" mat-raised-button color="primary" [disabled]="isLoading">
+            <button class="login-button custom-button" mat-raised-button color="primary" [disabled]="isLoading">
                 {{ (isLoading) ? 'Carregando...' : 'Login' }}
             </button>
         </form>
