--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,3 +1,10 @@
 <mat-toolbar color="primary">
     <span>E-commerce Admin</span>
+
+    <span class="spacer"></span>
+    <span>Olá Usuário,</span>
+
+    <button (click)="logout()" mat-icon-button class="example-icon favorite-icon">
+      <mat-icon>logout</mat-icon>
+    </button>
 </mat-toolbar>
