--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,4 +21,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-size: 14px;
     text-align: center;
     text-transform: uppercase;
-  }
+}
+
+.error {
+    color: rgb(255,82,82);
+}
