--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -5,12 +5,17 @@
             <mat-card-subtitle>Insira seu e-mail e senha para logar</mat-card-subtitle>
         </mat-card-header>
 
-        <form [formGroup]="loginForm" (ngSubmit)="submitForm()">
+        <form [formGroup]="form" (ngSubmit)="submitForm()">
             <!-- E-mail -->
             <p>
                 <mat-form-field class="example-full-width">
                     <mat-label>E-mail</mat-label>
                     <input matInput placeholder="E-mail" formControlName="email">
+
+                    <div *ngIf="isLoading && formControls['email'].errors" class="error">
+                        <div *ngIf="formControls['email'].errors['required']">Email is required</div>
+                        <div *ngIf="formControls['email'].errors['email']">Email is invalid</div>
+                    </div>
                 </mat-form-field>
             </p>
             
@@ -19,6 +24,10 @@
                 <mat-form-field class="example-full-width">
                     <mat-label>Senha</mat-label>
                     <input matInput placeholder="Senha" type="password" formControlName="password">
+
+                    <div *ngIf="isLoading && formControls['password'].errors" class="error">
+                        <div *ngIf="formControls['password'].errors['required']">Password is required</div>
+                    </div>
                 </mat-form-field>
             </p>
 
